# KrakenEgine

./: .travis.yml  CMakeLists.txt  README.md  Report20190307-1528 (3).diagsession  TODO.txt  bin - Shortcut.lnk  gtestUtilities.cmake  kraEngine.sln
GraphicsDX/: GraphicsDX.vcxproj  GraphicsDX.vcxproj.filters  kraD3D11ConstantBuffer.cpp  kraD3D11ConstantBuffer.h  kraD3D11DepthStencil.h  kraD3D11DepthStencylView.cpp  kraD3D11DepthStencylView.h  kraD3D11Device.cpp  kraD3D11Device.h  kraD3D11DeviceContext.cpp  kraD3D11DeviceContext.h  kraD3D11GraphicsAPI.cpp  kraD3D11GraphicsAPI.h  kraD3D11GraphicsBuffer.cpp  kraD3D11GraphicsBuffer.h  kraD3D11IndexBuffer.cpp  kraD3D11IndexBuffer.h  kraD3D11InputLayout.cpp  kraD3D11InputLayout.h  kraD3D11PixelShader.h  kraD3D11RasterizerState.cpp  kraD3D11RasterizerState.h  kraD3D11RenderTargetView.cpp  kraD3D11RenderTargetView.h  kraD3D11Sampler.cpp  kraD3D11Sampler.h  kraD3D11Shader.cpp  kraD3D11Shader.h  kraD3D11ShaderResourceView.cpp  kraD3D11ShaderResourceView.h  kraD3D11SwapChain.cpp  kraD3D11SwapChain.h  kraD3D11Texture.cpp  kraD3D11Texture.h  kraD3D11VertexBuffer.cpp  kraD3D11VertexBuffer.h  kraD3D11VertexShader.cpp  kraD3D11VertexShader.h  kraD3D11Viewport.cpp  kraD3D11Viewport.h  (+1 more)
Histogram/: Histogram.cpp  Histogram.vcxproj  Histogram.vcxproj.filters
kraCore/: kraBaseApplication.h  kraClock.cpp  kraCore.vcxproj  kraCore.vcxproj.filters  kraGraphicsBuffer.h  kraIndexBuffer.cpp  kraPrerequisitesCore.h
kraCore/include/: Camera.h  CameraManager.h  componentStuff.h  kraBaseApplication.h  kraBlob.h  kraBoxCollider.h  kraCamera.h  kraCameraManager.h  kraClock.h  kraCollider.h  kraCommonTypes.h  kraComponent.h  kraComputeShader.h  kraConstantBuffer.h  kraConstantBufferMatrices.h  kraDevice.h  (+41 more)
kraDeferredPBR/: kraDeferredPBR.cpp  kraDeferredPBR.vcxproj  kraDeferredPBR.vcxproj.filters
kraGraphicsDX/: GraphicsDX.vcxproj  GraphicsDX.vcxproj.filters
kraGraphicsDX_UnitTest/: PS.hlsl  RCa01628  RCa14784  Resource.h  VS.hlsl  WinAppTest.cpp  WinAppTest.h  kraGraphicsDX_UnitTest.cpp  kraGraphicsDX_UnitTest.rc  kraGraphicsDX_UnitTest.vcxproj  kraGraphicsDX_UnitTest.vcxproj.filters  kraGraphicsDXd.exp  kraGraphicsDXd.lib  main.cpp
kraInputManager/: Resource.h  kraInputManager.cpp  kraInputManager.rc  kraInputManager.vcxproj  kraInputManager.vcxproj.filters
kraInputManager2/: kraInputManager.vcxproj  kraInputManager.vcxproj.filters
kraPipelineDeferredPBR/: kraPipelineDeferredPBR.vcxproj  kraPipelineDeferredPBR.vcxproj.filters
kraUtilities/: kraUtilities.vcxproj  kraUtilities.vcxproj.filters
kraUtilities_UnitTest/: kraUtilities_UnitTest.vcxproj  main.cpp
(+152 files in other folders)
